frontend/test/should_fail/container_copy_constructor_003.grg
test t
{
	if {
		set<int>(set<Node>{}).empty();
	}
}
